connected to firebase and have chat functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <div id="app">
 
     </div>
+    <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyA_NV3YYOuv-F4PfAG44l9rYz8RhfvAGG8",
+        authDomain: "chatapp-50748.firebaseapp.com",
+        databaseURL: "https://chatapp-50748.firebaseio.com",
+        projectId: "chatapp-50748",
+        storageBucket: "chatapp-50748.appspot.com",
+        messagingSenderId: "1065837667402"
+      };
+      firebase.initializeApp(config);
+    </script>
     <script type="text/javascript" src="build/bundle.js"></script>
 </body>
 </html>
